# codeql-php

./: .gitignore  AUDIT.md  Cargo.toml  DEV.md  IMPROVEMENTS.md  MODULE.bazel  PHASE_DF_PLAN.md  PLAN.md  PROJECT_STATUS.md  README.md  STRUCTURAL_ROADMAP.md  THREAT_MODEL.md  codeql-workspace.yml
.github/workflows/: php-qltest.yml
bench/: PR_baseline.md  baseline.txt  last-run.csv  perf_bench.sh  run.sh  score_semgrep.py
cve/: README.md  run.sh  score.py
cve/abantecart/: CVE-2024-50801.php  CVE-2024-50802.php
cve/admidio/: CVE-2024-37906.php
cve/akaunting/: CVE-2024-22836.php
cve/backpack/: CVE-2024-52306.php
cve/bagisto/: CVE-2025-62416.php
cve/bludit/: CVE-2019-16113.php
cve/bolt/: CVE-2021-27367.php  CVE-2026-39229.php
cve/browsershot/: CVE-2025-1022.php  CVE-2025-3192.php
cve/cachet/: CVE-2023-43661.php
cve/cacti/: CVE-2023-39361.php  CVE-2023-49085.php
cve/cakephp/: CVE-2023-22727.php
cve/chamilo/: CVE-2025-50190.php  CVE-2026-32892.php
cve/codeigniter/: CVE-2025-54418.php
cve/concrete/: CVE-2022-30117.php
cve/contao/: CVE-2019-11512.php  GHSA-wq43-8r5p-w3mc.php
cve/craftcms/: CVE-2023-41892.php
cve/doctrine/: CVE-2021-43608.php
cve/dolibarr/: CVE-2023-38886.php  CVE-2024-34051.php  CVE-2024-5315.php
cve/drupal/: CVE-2024-13283.php  CVE-2024-13297.php  SA-CONTRIB-2023-015.php
docs/: adapting-frameworks.md  cve-cartography.md  framework-coverage.md
php/: BUILD.bazel  analyze.sh  build.sh  codeql-extractor.yml
php/extractor/: Cargo.toml
php/extractor/src/: autobuilder.rs  extractor.rs  generator.rs
php/ql/lib/: php.qll  (+3 more)
(+575 files in other folders)
