[package]
name = "codeql-extractor-php"
description = "CodeQL PHP extractor"
version = "0.1.0"
authors = ["GitHub"]
edition = "2024"

[[bin]]
name = "codeql-extractor-php"
path = "src/main.rs"

[dependencies]
tree-sitter = ">= 0.23.0"
tree-sitter-php = "0.24"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rayon = "1.11.0"
regex = "1.11.3"
encoding = "0.2"
lazy_static = "1.5.0"
serde_json = "1.0.145"

codeql-extractor = { path = "../../shared/tree-sitter-extractor" }
